@@ -23,9 +23,7 @@
  */
 package global.goldenera.node.shared.utils;
 
-import java.net.InetAddress;
 import java.net.URI;
-import java.net.URL;
 import java.util.Base64;
 
 import global.goldenera.node.shared.exceptions.GEValidationException;
@@ -88,28 +86,132 @@ public class ValidatorUtil {
             }
         }
 
+        /**
+         * Checks if a URL is safe to use (not pointing to localhost or private
+         * networks).
+         * This is SSRF (Server-Side Request Forgery) protection.
+         * Does NOT use DNS resolution - works reliably in Docker.
+         */
         public static boolean isSafe(String urlStr) {
             try {
-                URL url = new URL(urlStr);
-                return isSafe(url.getHost());
+                URI uri = new URI(urlStr);
+                String host = uri.getHost();
+                if (host == null || host.isBlank()) {
+                    return false;
+                }
+                return HostValidator.isSafe(host);
             } catch (Exception e) {
                 return false;
             }
         }
     }
 
-    public static class IpAddress {
-        public static boolean isSafe(String str) {
+    /**
+     * Validates hostnames and IP addresses without DNS resolution.
+     * Blocks localhost, private IPs, and internal Docker hostnames.
+     */
+    @UtilityClass
+    public static class HostValidator {
+        // Blocked hostname patterns (case-insensitive)
+        private static final String[] BLOCKED_HOSTNAMES = {
+                "localhost",
+                "host.docker.internal",
+                "gateway.docker.internal",
+                "kubernetes.default",
+                "metadata.google.internal"
+        };
+
+        /**
+         * Check if a host (hostname or IP) is safe for external requests.
+         * Returns true if the host appears to be a public/external address.
+         */
+        public static boolean isSafe(String host) {
+            if (host == null || host.isBlank()) {
+                return false;
+            }
+            host = host.toLowerCase().trim();
+
+            // Block known internal hostnames
+            for (String blocked : BLOCKED_HOSTNAMES) {
+                if (host.equals(blocked) || host.endsWith("." + blocked)) {
+                    return false;
+                }
+            }
+
+            // Check if it looks like an IP address
+            if (isIpAddress(host)) {
+                return isPublicIp(host);
+            }
+
+            // For regular hostnames, allow them (we can't resolve DNS reliably in Docker)
+            // The main concern is blocking localhost and private IPs
+            return true;
+        }
+
+        private static boolean isIpAddress(String host) {
+            // Simple check: contains only digits and dots (IPv4) or contains colon (IPv6)
+            return host.matches("^[0-9.]+$") || host.contains(":");
+        }
+
+        private static boolean isPublicIp(String ip) {
+            // Handle IPv6 loopback
+            if (ip.equals("::1") || ip.equals("0:0:0:0:0:0:0:1")) {
+                return false;
+            }
+
+            // Parse IPv4
+            String[] parts = ip.split("\\.");
+            if (parts.length != 4) {
+                // Not a valid IPv4. For IPv6, allow by default (could be enhanced)
+                return !ip.startsWith("fe80:") && !ip.startsWith("fc") && !ip.startsWith("fd");
+            }
+
             try {
-                InetAddress address = InetAddress.getByName(str);
-                if (address.isLoopbackAddress() || address.isLinkLocalAddress() || address.isSiteLocalAddress()) {
+                int[] octets = new int[4];
+                for (int i = 0; i < 4; i++) {
+                    octets[i] = Integer.parseInt(parts[i]);
+                    if (octets[i] < 0 || octets[i] > 255) {
+                        return false;
+                    }
+                }
+
+                // 127.0.0.0/8 - Loopback
+                if (octets[0] == 127) {
                     return false;
                 }
-                if (address.getHostAddress().equals("169.254.169.254")) {
+
+                // 0.0.0.0/8 - "This" network
+                if (octets[0] == 0) {
                     return false;
                 }
+
+                // 10.0.0.0/8 - Private
+                if (octets[0] == 10) {
+                    return false;
+                }
+
+                // 172.16.0.0/12 - Private (172.16.0.0 - 172.31.255.255)
+                if (octets[0] == 172 && octets[1] >= 16 && octets[1] <= 31) {
+                    return false;
+                }
+
+                // 192.168.0.0/16 - Private
+                if (octets[0] == 192 && octets[1] == 168) {
+                    return false;
+                }
+
+                // 169.254.0.0/16 - Link-local (including AWS metadata 169.254.169.254)
+                if (octets[0] == 169 && octets[1] == 254) {
+                    return false;
+                }
+
+                // 100.64.0.0/10 - Carrier-grade NAT
+                if (octets[0] == 100 && octets[1] >= 64 && octets[1] <= 127) {
+                    return false;
+                }
+
                 return true;
-            } catch (Exception e) {
+            } catch (NumberFormatException e) {
                 return false;
             }
         }
